my-hello/openshift/openshift.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-hello
  labels:
    app: my-hello
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: my-hello
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-hello
  labels:
    app: my-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-hello
  template:
    metadata:
      labels:
        app: my-hello
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/my-hello/my-hello
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
